1) fixed HTNL global left shift, 2) Fixes to filters, header and slider blocks. 3) Added global styles 4) Created custom drop-down select element structure, styles and js script

--- a/source/styles/blocks/filters.scss
+++ b/source/styles/blocks/filters.scss
@@ -333,7 +333,8 @@
     border-radius: 50%;
   }
 
-  .form-apply, .form-reset{
+  .form-apply,
+  .form-reset {
     width: 100%;
     height: 40px;
     font-family: "Montserrat Regular";
@@ -352,7 +353,7 @@
     margin-bottom: 20px;
   }
 
-  .form-reset{
+  .form-reset {
     color: #7859CF;
     background-color: white;
   }
@@ -397,6 +398,158 @@
 
 }
 
+.sorting-row {
+  margin-top: 36px;
+}
+
+.sorting-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 280px;
+  background-color: transparent;
+  margin: auto;
+
+  .sorting-badge {
+    margin-right: 8px;
+
+    //styleName: Label;
+    font-family: "Montserrat Regular";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #333333;
+
+  }
+}
+
+.dropDown-select {
+  height: 32px;
+  width: 165px;
+  margin: 0;
+  padding: 0;
+
+  .dropDown-menu {
+    position: absolute;
+    background-color: white;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 20px;
+    margin-left: -25px;
+    width: 190px;
+    border-radius: 6px;
+
+    box-shadow: 0px 5px 15px 0px #00000033;
+
+    overflow: hidden;
+  }
+
+  .dropDown-option {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    height: 40px;
+    width: 100%;
+    border-bottom: solid 1px #F0EBFF;
+
+    font-family: "Montserrat Regular";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #333333;
+  }
+
+  .dropDown-option:hover,
+  .dropDown-option:focus {
+    background-color: #F0EBFF;
+  }
+
+  .dropDown-option__selected {
+    background-color: #7859CF;
+    color: white;
+  }
+}
+
+.dropDown-screen-container {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  xxborder: solid 1px red;
+  xxbackground-color: yellow;
+
+  .dropDown-screen {
+    box-sizing: border-box;
+    height: 30px;
+    border-style: none;
+    width: 100%;
+    padding-left: 10px;
+    background-color: transparent;
+
+    font-family: "Montserrat Regular";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #7859CF;
+
+  }
+
+  .dropDown-arrow {
+    height: 30px;
+    width: 30px;
+    background-image: url("/icons/arrow_down.svg");
+    background-repeat: no-repeat;
+    background-size: 10px 6px;
+    background-position: center;
+  }
+}
+
+.dropDown-screen-container:hover,
+.dropDown-screen-container:focus,
+.dropDown-screen:focus {
+  background-color: #F0EBFF;
+  border-style: none;
+}
+
+.dropDown-arrow--active {
+  transform: scaleY(-1);
+}
 
 
-/* Е */
+.cards-grid {
+  display: grid;
+  padding: 0;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+  background-color: red;
+  width: 100%;
+
+}
+.cards-grid .card-item {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  height: 420px;
+  background-color: lightblue;
+  padding: 20px;
+  row-gap: 16px;
+  margin: auto;
+}
+
+@media (max-width: 1440px) {
+  .cards-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1439px)  {
+  .cards-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 100px) and (max-width: 767px) {
+  .cards-grid {
+    grid-template-columns: 1fr;
+  }
+}
