--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -9,25 +9,14 @@
   padding-right: 20px;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
+
 
 
 /* header - mobile */
 @media (min-width: 100px) and (max-width: 767px) {
 
   .header {
-    justify-content: flex-start;
+    justify-content: center;
   }
 
 
