--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -13,11 +13,24 @@ img {
 }
 
 
-body {
+
+body{
   margin: 0;
+  padding:0;
 }
 
-
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .badge {
   font-family: "Montserrat Bold";
@@ -31,3 +44,4 @@ body {
 
   margin-top: 50px;
 }
+
